# calblend

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SETUP.md  package-lock.json  package.json  test-build.sh
crates/calblend-core/: Cargo.toml
crates/calblend-core/src/: auth.rs  cache.rs  error.rs  http.rs  lib.rs  models.rs  sync.rs
crates/calblend-core/src/providers/: google.rs  mod.rs  outlook.rs
crates/calblend-core/src/providers/google/: api.rs  auth.rs  mod.rs  models.rs  tests.rs  webhooks.rs
crates/calblend-ffi/: Cargo.toml
crates/calblend-ffi/src/: auth.rs  client.rs  conversions.rs  error.rs  lib.rs  models.rs  token_storage.rs
crates/calblend-ffi/src/providers/: google.rs  mod.rs
docs/: IMPLEMENTATION_ROADMAP.md  PROJECT_SPEC.md  unified-calendar-design.md
examples/: google_oauth.rs  google_webhooks.rs
examples/basic/: index.ts  package.json  tsconfig.json
