[workspace]
members = ["crates/calblend-core", "crates/calblend-ffi"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
license = "Elastic-2.0"
repository = "https://github.com/calblend/calblend"
rust-version = "1.88"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.3"
http = "0.2"
urlencoding = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OAuth
oauth2 = "4.4"
base64 = "0.22"
url = "2.5"

# Crypto for PKCE
sha2 = "0.10"
rand = "0.8"

# Testing
mockito = "1.6"
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true