[package]
name = "calblend-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }

# OAuth
oauth2 = "4.4"
base64 = "0.22"

# Async trait
async-trait = "0.1"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# URL parsing
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
mockito = { workspace = true }
wiremock = { workspace = true }
tracing-subscriber = { workspace = true }