[package]
name = "calblend-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
http = { workspace = true }
urlencoding = { workspace = true }
tracing = { workspace = true }

# OAuth
oauth2 = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }

# Async trait
async-trait = "0.1"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = { workspace = true }
wiremock = { workspace = true }
tracing-subscriber = { workspace = true }